# test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: airbyte_setup.yml  data_sources.yml
datacube/: Dockerfile  cube.py
datacube/model/: globals.py
datacube/model/cubes/: marts.yml.jinja
projects/claims/: .user.yml  dbt_project.yml  profiles.yml
projects/claims/cube/: staging.yml.jinja
projects/claims/cube/views/: claims_overview.yml  dealer_performance.yml
projects/claims/macros/: generate_schema_name.sql
projects/claims/models/: sources.yml
projects/claims/seeds/: dim_vehicles.csv  fact_claim_attachments.csv  fact_claim_audit_log.csv  fact_claim_lines.csv  fact_claims.csv  fact_cluster_assignments.csv  ref_dealer_baselines.csv  ref_pfp.csv  ref_srt.csv  schema.yml
projects/claims/tests/: assert_anomaly_has_risk_score.sql  assert_claim_amount_equals_parts_plus_labor.sql  assert_labor_variance_within_tolerance.sql  assert_no_orphan_claim_lines.sql
projects/fab_trucking/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
projects/reg/: .user.yml  dbt_project.yml  profiles.yml
projects/reg/cube/: staging.yml.jinja
projects/reg/seeds/: customers.csv  product_substances.csv  products.csv  regulatory_data_sources.csv  regulatory_lists.csv  restricted_substances.csv  schema.yml  survey_requests.csv  survey_responses.csv
projects/reg/tests/: assert_concentration_within_range.sql  assert_no_orphan_survey_responses.sql  assert_valid_compliance_status.sql
scripts/: generate_seeds.py
(+84 files in other folders)
