[project]
name = "reg-demo"
version = "0.1.0"
description = "Example dbt projects for the medallion pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-core>=1.9,<2.0",
    "dbt-postgres>=1.9,<2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
